# todoNotifier_terminal

./: .gitignore  Cargo.toml  build.rs  history.txt  json.txt
.github/workflows/: buildrelease.yml
db.db/: 000013.sst  000016.sst  IDENTITY  MANIFEST-000010  MANIFEST-000018  MANIFEST-000023  MANIFEST-000027
proto/: db_api.proto
saved_works/: saved.json
src/: db.rs  file_work.rs  main.rs  proto_work.rs  string_work.rs  terminal.rs  time_helper.rs  time_work.rs  week.rs  work.rs
