[package]
name = "todo_term"
version = "2.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
humantime = "*"
surrealdb = "1.4.0"
tokio = "*"